# jarvis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  run.sh
console/: Console.cpp  Console.hpp  console.cpp
fs/DirContent/: DirContent.cpp  DirContent.hpp
fs/DirContent/Dir/: Dir.cpp  Dir.hpp
fs/DirContent/File/: File.cpp  File.hpp
staff/: Architect.xml
